[package]
name = "gmpublisher"
version = "2.0.0"
description = "gmpublisher"
authors = [ "William Venner <william@venner.io>" ]
license = "GPL-3.0"
repository = "https://github.com/WilliamVenner/gmpublisher"
default-run = "gmpublisher"
edition = "2018"
build = "src/build.rs"

[profile.release]
lto = true
codegen-units = 1

[build-dependencies.tauri-build]
version = "1.0.0-beta-rc.0"
features = [ "codegen" ]
#git = "https://github.com/williamvenner/tauri"
#branch = "personal"

[build-dependencies]
bindgen = "0.58.1"

[dependencies.tauri]
features = ["api-all", "cli"]
path = "../../tauri/core/tauri"
#git = "https://github.com/williamvenner/tauri"
#branch = "personal"

[dependencies.steamworks]
features = [ "serde" ]
#git = "https://github.com/WilliamVenner/steamworks-rs.git"
#branch = "master"
path = "../../steamworks-rs"

[dependencies]
turbonone = "0.2.1"
serde_json = "1.0.64"
serde = { version = "1.0.125", features = [ "derive", "rc" ] }
rayon = "1.5.0"
parking_lot = { version = "0.11.1", features = [ "serde", "deadlock_detection" ] }
xz2 = "0.1.6"
indexmap = "1.6.2"
dunce = "1.0.1"
lazy_static = "1.4.0"
dirs = "3.0.1"
anyhow = "1.0.40"
image = "0.23.14"
base64 = "0.13.0"
atomic_refcell = "0.1.7"
thiserror = "1.0.24"
chardetng = "0.1.10"
byteorder = "1.4.3"
walkdir = "2.3.2"
crc32fast = "1.2.1"
path-slash = "0.1.4"
erased-serde = "0.3.13"
derive_more = "0.99.13"
crossbeam = "0.8.0"
backtrace = "0.3.56"
steamlocate = "0.1.3"
chrono = { version = "0.4.19", features = [ "serde" ] }
bincode = "1.3.3"
dirs-next = "2.0.0"
opener = "0.4.1"
websocket = "0.26.2"
fuzzy-matcher = "0.3.7"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
