[package]
name = "gmpublisher"
version = "2.11.2"
description = "gmpublisher"
authors = ["William Venner <william@venner.io>"]
license = "GPL-3.0"
repository = "https://github.com/WilliamVenner/gmpublisher"
edition = "2021"
publish = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[build-dependencies]
tauri-build = { version = "1.5", features = ["codegen"] }

[dependencies]
tauri = { version = "1.6", features = ["api-all", "devtools"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tauri-utils = "1.5"
turbonone = "0.2.1"
rayon = "1.5.0"
parking_lot = { version = "0.11.1", features = ["serde", "deadlock_detection"] }
xz2 = "0.1.7"
indexmap = "1.6.2"
dunce = "1.0.1"
lazy_static = "1.4.0"
dirs = "3.0.1"
anyhow = "1.0.40"
image = "0.23.14"
base64 = "0.13.0"
atomic_refcell = "0.1.7"
thiserror = "1.0.24"
chardetng = "0.1.10"
byteorder = "1.4.3"
walkdir = "2.3.2"
crc32fast = "1.2.1"
path-slash = "0.1.4"
erased-serde = "0.3.13"
derive_more = "0.99.13"
crossbeam = "0.8.0"
backtrace = "0.3.56"
steamlocate = "1.2.1"
chrono = { version = "0.4.19", features = ["serde"] }
bincode = "1.3.3"
dirs-next = "2.0.0"
opener = "0.4.1"
websocket = "0.26.2"
fuzzy-matcher = "0.3.7"
num_cpus = "1"
once_cell = "1.7.2"
clap = "4.5.4"
trash = "2.0.1"
ureq = { version = "2.9.4", features = ["native-tls"] }
regex = "1"
steamworks = { version = "0.11.0", features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
fork = "0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
